# hack_emulator

./: README.md  meson.build
include/: emulator.h
src/: emulator.c  main.c
subprojects/: unity.wrap
test/: emulator_test.c
